Solucionado el método de workouts que usaba split, cambiado a objeto